<resources>
    <string name="app_name">MobileDesk</string>
    <string name="title_problem_form">Заявить</string>
    <string name="title_my_problems">Мои проблемы</string>
    <string name="title_my_tasks">Мои задачи</string>
    <string name="title_master">Меню мастера</string>
    <string name="title_profile">Мой профиль</string>
    <string name="title_login">Войти</string>

    <string name="login1">ivanov@sinara.ru</string>
    <string name="password1">123456</string>
    <string name="login2">smirnov@sinara.ru</string>
    <string name="password2">911911</string>
    <string name="login3">petrov@sinara.ru</string>
    <string name="password3">024680</string>
    <string name="login4">sidorov@sinara.ru</string>
    <string name="password4">888888</string>
    <string name="profile_sub_info_warning_label">Внимание! Информация автоматически отображается из вашего личного кабинета. Для изменения обратитесь в отдел кадров.</string>
    <string name="profile_sub_info_personal_data_label">Персональные данные</string>
    <string name="profile_sub_info_fullname_label">ФИО</string>
    <string name="profile_sub_info_contact_phone">Контактный телефон</string>
    <string name="profile_sub_info_birth_date_label">Дата рождения</string>
    <string name="profile_sub_info_email_label">Почта</string>
    <string name="profile_sub_info_position_label">Должность</string>
    <string name="profile_sub_award_header_label">Личная статистика</string>
    <string name="profile_sub_award_earned_tokens_label">Заработанные токены</string>
    <string name="profile_sub_created_requests_label">Кол-во заведенных заявок</string>
    <string name="profile_sub_completed_requests_label">Кол-во исполненных заявок</string>
    <string name="profile_sub_last_completed_date_label">Дата последней исполненной заявки</string>
    <string name="title_statistics">Статистика</string>
    <string name="profile_exit_button_title">Выйти</string>
    <string name="login_password_forgot_button_title">Забыли пароль?</string>
    <string name="login_button_title">Вход</string>
    <string name="edit_text_hint_password">Пароль</string>
    <string name="edit_text_hint_login">Логин</string>
    <string name="login_problemdesk_title">MobileDesk</string>
    <string name="problem_form_edit_text_hint">Опишите проблему...</string>
    <string name="problem_form_button_send_title">Отправить</string>
    <string name="master_approve_bottom_sheet_dialog_creation_date_label">Дата создания</string>
    <string name="master_approve_bottom_sheet_dialog_specialization_label">Специализация</string>
    <string name="master_approve_bottom_sheet_dialog_area_label">Участок</string>
    <string name="master_approve_bottom_sheet_dialog_description_label">Текст заявки</string>
    <string name="master_approve_bottom_sheet_dialog_edit_text_hint">Пояснение к заявке</string>
    <string name="master_approve_bottom_sheet_dialog_cancel_button">Отклонить</string>
    <string name="master_approve_bottom_sheet_dialog_approve_button">Подтвердить</string>
    <string name="log_bottom_sheet_dialog_name_label">Имя:</string>
    <string name="log_bottom_sheet_dialog_date_label">Время:</string>
    <string name="log_bottom_sheet_dialog_status_label">Статус:</string>
    <string name="log_bottom_sheet_dialog_reason_label">Пометка:</string>
    <string name="bottom_sheet_dialog_fragment_date_label">Дата создания</string>
    <string name="bottom_sheet_dialog_fragment_specialization_label">Специализация</string>
    <string name="bottom_sheet_dialog_fragment_area_label">Участок</string>
    <string name="bottom_sheet_dialog_fragment_description_label">Текст заявки</string>
    <string name="bottom_sheet_dialog_fragment_reason_hint">Комментарий</string>
    <string name="bottom_sheet_dialog_fragment_requestor_delete">Удалить заявку 🗑</string>
    <string name="bottom_sheet_dialog_fragment_requestor_solved">Решено ✅</string>
    <string name="bottom_sheet_dialog_fragment_requestor_send_back">↩️ Переделать</string>
    <string name="bottom_sheet_dialog_fragment_master_cancel">❌ Отменить</string>
    <string name="bottom_sheet_dialog_fragment_approve">Принять ✅</string>
    <string name="bottom_sheet_dialog_fragment_executor_take">Взять в работу 🛠</string>
    <string name="bottom_sheet_dialog_fragment_executor_send">Отправить на проверку 📨</string>
</resources>