<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_problem_form"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_problem_form" />

    <item
        android:id="@+id/navigation_my_problems"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_my_problems" />

    <item
        android:id="@+id/navigation_my_tasks"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_my_tasks" />

    <item
        android:id="@+id/navigation_master"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_master" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_profile" />
</menu>