<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<!--TODO  UI-->

	<TextView
		android:id="@+id/date_of_creation_data"
		style="@style/dataTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/date_of_creation_label"
		style="@style/labelTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/master_approve_bottom_sheet_dialog_creation_date_label" />

	<TextureView
		android:id="@+id/specialization_data"
		style="@style/dataTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/specialization_label"
		style="@style/labelTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/master_approve_bottom_sheet_dialog_specialization_label" />

	<TextureView
		android:id="@+id/area_data"
		style="@style/dataTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/area_label"
		style="@style/labelTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/master_approve_bottom_sheet_dialog_area_label" />

	<TextureView
		android:id="@+id/description_data"
		style="@style/dataTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/description_label"
		style="@style/labelTextViewStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/master_approve_bottom_sheet_dialog_description_label" />

	<EditText
		android:id="@+id/edit_text_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/master_approve_bottom_sheet_dialog_edit_text_hint" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:gravity="end"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_cancel"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/master_approve_bottom_sheet_dialog_cancel_button" />

		<Button
			android:id="@+id/button_approve"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:text="@string/master_approve_bottom_sheet_dialog_approve_button" />
	</LinearLayout>
</LinearLayout>