<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/cardViewStyle"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="8dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="4dp"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingBottom="4dp">

		<!-- Row for Status -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/log_bottom_sheet_dialog_status_label" />

			<TextView
				android:id="@+id/status"
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				tools:text="Запрос создан" />
		</LinearLayout>

		<!-- Row for Time -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/log_bottom_sheet_dialog_date_label" />

			<TextView
				android:id="@+id/time"
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				tools:text="16 авг. 2024 г., 19:33" />
		</LinearLayout>

		<!-- Row for Name -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/log_bottom_sheet_dialog_name_label" />

			<TextView
				android:id="@+id/name"
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				tools:text="Абобус Жмышенко"/>
		</LinearLayout>

		<!-- Row for Reason -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				style="@style/textViewStyle"
				android:id="@+id/reason_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/log_bottom_sheet_dialog_reason_label" />

			<TextView
				android:id="@+id/reason"
				style="@style/textViewStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				tools:text="патамушта"/>
		</LinearLayout>

	</LinearLayout>

</androidx.cardview.widget.CardView>
